# 3d_renderer

./: CMakeLists.txt  README.md
applications/cannon/: Makefile  cannon.cpp
applications/clock/: Makefile  clock.cpp
applications/shadedsphere/: shadedsphere.cpp
applications/spherecast/: spherecast.cpp
inc/: Canvas.h  Color.h  Lighting.h  Matrix.h  RaySphere.h  Tuple.h
src/: Canvas.cpp  Canvas.h  Color.h  Material.h  Matrix.h  PointLight.h  RaySphere.h  Transformations.h  Tuple.cpp  Tuple.h  World.h
tests/: CMakeLists.txt  ColorTest.cpp  Makefile  TupleTest.cpp  canvas_tests.h  color_tests.h  light_tests.h  lighting_tests.h  material_tests.h  matrix_tests.h  point_tests.h  ray_tests.h  test.cpp  transform_tests.h  tuple_tests.h  vector_tests.h  world_tests.h
